2004-11-18  Alexandre Oliva  <aoliva@redhat.com>

	* manual/.cvsignore: Add dir-add.texi.

2005-02-06  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/dl-machine.h (elf_machine_rela): Use RESOLVE_MAP
	all the time.

2004-11-03  Marcus Brinkmann  <marcus@gnu.org>

	* configure.in (sysnames): Append sysdeps/generic for each add-on.
	* configure: Regenerated.

2005-02-02  Alfred M. Szmidt  <ams@gnu.org>

	* sysdeps/mach/hurd/tls.h: Include <stdbool.h>
	(dtv_t): Change pointer type to be a struct which also contains
	information whether the memory pointed to is static TLS or not.

	* sysdeps/generic/syslog.c (send_flags) [!send_flags]: Define it.

	* shadow/sgetspent_r.c (FALSE): Macro renamed to ...
	(FALSEP): ... this.  Updated all references.

	* libio/fmemopen.c: Include <stdint.h>.

2005-01-30  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_helper.c (get_mapping): Use MSG_NOSIGNAL if available.
	* nscd/connections.c (send_ro_fd): Likewise.

2005-01-28  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/tst-auditmod1.c: Add ia64 entries.
	* sysdeps/generic/ldsodefs.h (La_ia64_regs): New.
	(La_ia64_retval): New.
	(audit_ifaces): Add ia64 entries.
	* sysdeps/ia64/bits/link.h: New file.
	* sysdeps/ia64/dl-machine.h (elf_machine_runtime_setup): Test
	for dl_profile non-null.
	(ARCH_LA_PLTENTER): New.
	(ARCH_LA_PLTEXIT): New.
	* sysdeps/ia64/dl-trampoline.S (_dl_runtime_resolve): Allocate
	only 2 output registers. Allocate stack to save/restore
	8 incoming fp registers. Call _dl_fixup instead of fixup.
	(_dl_runtime_profile): Rewrite.

2005-01-28  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/bits/link.h: New file.
	* sysdeps/s390/s390-32/dl-trampoline.S: New file.
	* sysdeps/s390/s390-64/dl-trampoline.S: New file.
	* sysdeps/s390/s390-32/dl-machine.h: Move PLT trampolines to
	dl-trampoline.S. Use RESOLVE_MAP instead of RESOLVE to protect
	relocation code.
	(elf_machine_runtime_setup): Test for dl_profile non-null.